@@ -15,12 +15,13 @@ before_script:
 bundler_args: --without development system_tests --path .vendor
 before_install: rm Gemfile.lock || true
 script:
-- bundle exec rake compare_latest_tag
-- bundle exec rake test
+  # TODO: Uncomment when out of alpha
+  #- bundle exec rake compare_latest_tag
+  - bundle exec rake test
 notifications:
   email: false
 rvm:
-- 2.1.9
+  - 2.1.9
 env:
   global:
     - STRICT_VARIABLES=yes
